Fix bug with nav-collapse height

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -7,6 +7,7 @@
     right: 0;
     top:0;
     z-index: 1;
+    min-height: 100%;
 }
 .navbar-collapse.show, .navbar-collapse.collapsing { 
     top:100%;
